[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/MainMenu/title.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuTheme/menutheme.theme" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "leave"
tracks/0/type = "value"
tracks/0/path = NodePath("mainMenu/start:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 359 ), Vector2( -250, 359 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mainMenu/options:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 431 ), Vector2( -250, 431 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mainMenu/credits:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 503 ), Vector2( -250, 503 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("mainMenu/leave:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 575 ), Vector2( -250, 575 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "changescene"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("fade:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/leave = SubResource( 1 )

[node name="mainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="gameLogo" type="Label" parent="mainMenu"]
anchor_right = 0.25
margin_top = 102.0
margin_bottom = 141.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PROJECT_THETA
"
align = 1

[node name="start" type="Button" parent="mainMenu"]
margin_top = 359.0
margin_right = 61.0
margin_bottom = 383.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START"
flat = true

[node name="options" type="Button" parent="mainMenu"]
margin_top = 431.0
margin_right = 81.0
margin_bottom = 455.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
flat = true

[node name="credits" type="Button" parent="mainMenu"]
margin_top = 503.0
margin_right = 82.0
margin_bottom = 527.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CREDITS"
flat = true

[node name="leave" type="Button" parent="mainMenu"]
margin_top = 575.0
margin_right = 64.0
margin_bottom = 599.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEAVE"
flat = true

[connection signal="button_down" from="mainMenu/start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="mainMenu/options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="mainMenu/credits" to="." method="_on_credits_button_down"]
[connection signal="button_down" from="mainMenu/leave" to="." method="_on_leave_button_down"]
